# Doxygen_CPP

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile
example/: main.cpp
include/: math.h
src/: math.cpp
